Revision history for Perl extension Test::Tk.

0.01  Sun Jan 15 10:03:22 2023
	- original version; created by h2xs 1.23 with options
		-X Test::Tk

1.00  Tue Jan 17
	- Initial release.

1.01  Tue Jan 17
	- Corrected some pod formatting errors.

2.00  Sat Jan 21
	- Corrected some pod typos and errors.
	- Now skips tests if not on Windows and no XServer running.

2.01  Sun Jan 22
	- Updated documentation

2.02  Mon Jan 23
	- Fixed documentation
	- Added use strict and use warnings to Makefile.PL

2.03  Mon Jan 23
	- Fixed couple of typos in documentation.

3.00  Thu Jun 29 2023
	- Use Test::Deep for testing data structures
	- depricated functions listcompare and hashcompare

3.01  Fri Jun 30 2023
	- Added Test::Deep to prerequisites.

3.02 Sat Aug 19 2023
	- Switched result and expected in cmp_deeplu to reflect fails better
	- Updated documentation
	- Added $quitdelay as new export. Prevents crashing my desktop environment when
	  many windows are flipping in and out of existence.