@@ -32,7 +32,8 @@ Revision history for Perl extension Test::Tk.
 	- Added Test::Deep to prerequisites.
 
 3.02 Sat Aug 19 2023
-	- Switched result and expected in cmp_deeplu to reflect fails better
+	- Switched result and expected in cmp_deeply to reflect fails better
 	- Updated documentation
 	- Added $quitdelay as new export. Prevents crashing my desktop environment when
-	  many windows are flipping in and out of existence.
+	  many windows are rapidly flipping in and out of existence.
+	- Added sub testaccessors
